INTEGRATION: CWS imprec01 (1.6.2); FILE MERGED 2004/12/20 11:30:02 cn 1.6.2.1: #i39323# parameter timeOut defaulted